--- a/src/content/recepieContent.scss
+++ b/src/content/recepieContent.scss
@@ -1,13 +1,26 @@
 .container{
     background: var(--White);
     font-family: var(--font-family-text);
-    width: 600px;
+    width: 45rem;
+    color: var(--Wenge-Brown);
+    padding: 2.2rem;
+    margin: 4rem 0;
+    border-radius: 2rem;
 }
 
 .container_recepie{
     display: flex;
     flex-direction: column;
     gap: 2rem;
+}
+
+.container_top_image{
+    background: url("./../assets/images/image-omelette.jpeg") center center;
+    width: 100%;
+    height: 260px;
+    background-size: cover;
+    margin-bottom: 2rem;
+    border-radius: 1.5rem;
 }
 
 h1, h3{
@@ -31,9 +44,9 @@ h3{
 }
 
 .container_recepie_ingres,
-.container_recepie_ingrediant{
+.container_recepie_ingrediant,
+.container_recepie_instructions_nutrition_info{
     font-weight: 400;
-    color: var(--Wenge-Brown);
     line-height: 1.4;
     margin-top: 1rem;
 }
@@ -70,16 +83,52 @@ li::marker {
     font-weight: 600;
   }
 
+.container_recepie_instructions_nutrition_info_facts{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    margin-top: 1rem;
+}
+
+.container_recepie_instructions_nutrition_info_facts_line{
+    display: flex;
+    flex-direction: row;
+}
+
+.container_recepie_instructions_nutrition_info_facts_line_type,
+.container_recepie_instructions_nutrition_info_facts_line_amount{
+    width:  50%;
+    text-align: left;
+    align-items: start;
+    padding: 0 2rem;
+}
+
+.container_recepie_instructions_nutrition_info_facts_line_amount{
+    font-weight: 700;
+    color: var(--Dark-Raspberry);
+}
+
+hr {
+    border: none;
+    height: 1px; 
+    background-color: var(--Light-Grey)
+}
+
 
 @media only screen and (max-width: 600px) {
     .container{
         width: 100%;
+        padding: 0;
+        margin: 0;
+        border-radius: 0;
     }
     .container_top_image{
         background: url("./../assets/images/image-omelette.jpeg") center center;
         width: 100%;
         height: 160px;
         background-size: cover;
+        margin-bottom: 0;
+        border-radius: 0;
     }
     .container_recepie{
         padding: 40px;
